added confidence threshold

--- a/cone_detection_train.ipynb
+++ b/cone_detection_train.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Upload this file to your Google Drive and run it using Google Colab**"
+    "**Upload this file to your Google Drive and run it using [Google Colab](https://colab.research.google.com/)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Check if GPU is available\n",
     "If the following command doesn't work, go to Edit -> Notebook Settings -> Select GPU"
    ]
   },
@@ -26,8 +27,14 @@
    },
    "outputs": [],
    "source": [
-    "# Check if GPU is available\n",
     "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. sets up and verifies the environment"
    ]
   },
   {
@@ -42,7 +49,6 @@
    },
    "outputs": [],
    "source": [
-    "# sets up and verifies the environment\n",
     "%pip install ultralytics supervision roboflow\n",
     "import ultralytics\n",
     "ultralytics.checks()"
@@ -52,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download dataset:\n",
+    "### 3. Download dataset:\n",
     "1. Go to https://universe.roboflow.com/mbot-p2cui/mbot-cone-detection-o3klb/dataset/5\n",
     "2. Click \"Download Project\"\n",
     "3. Choose the format you prefer, here we use YOLOv11\n",
@@ -83,8 +89,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trian with your dateset:\n",
-    "1. Here we use yolo11 small weights, thus model=yolo11s.pt\n",
+    "### 4. Trian with your dateset:\n",
+    "1. Here we use yolo11 small weights, thus `model=yolo11s.pt`\n",
     "2. replace the `data=xxxx` with your data location, open the side panel, go to \"Files\", find `data.yaml`, right click to copy path.\n",
     "\n",
     "Once it's done, check the output to see where the best weights saved, and then copy that weights to the utils folder under mbot_vision.\n",
