Feature/mbot follower (#7)

--- a/utils/cone_detection_train.ipynb
+++ b/utils/cone_detection_train.ipynb
@@ -59,11 +59,12 @@
    "metadata": {},
    "source": [
     "### 3. Download dataset:\n",
-    "1. Go to https://universe.roboflow.com/mbot-p2cui/mbot-cone-detection-o3klb/dataset/5\n",
-    "2. Click \"Download Project\"\n",
-    "3. Choose the format you prefer, here we use YOLOv11\n",
-    "4. Click \"Show download code\" -> \"continue\"\n",
-    "5. Copy the code snippet under the \"Jupyter\" tab, and paste to the block below to replace"
+    "1. Sign in to roboflow\n",
+    "2. Go to https://universe.roboflow.com/mbot-p2cui/mbot-cone-detection-o3klb/dataset/5\n",
+    "3. Click \"Download Dataset\" -> \"Download Dataset\"\n",
+    "4. Choose the format you prefer, here we use YOLOv11\n",
+    "5. Click \"Show download code\" -> \"continue\"\n",
+    "6. Copy the code snippet under the \"Jupyter\" tab, and paste to the block below to replace"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "source": [
     "# Train with yolo11n model, replace it with the model you want to train\n",
     "# replace: data=<path-to-your-data.yaml>\n",
-    "!yolo task=detect mode=train model=yolo11s.pt data=/content/MBot-Cone-Detection-3/data.yaml epochs=30 imgsz=640 plots=True"
+    "!yolo task=detect mode=train model=yolo11s.pt data=/content/MBot-Cone-Detection-5/data.yaml epochs=30 imgsz=640 plots=True"
    ]
   }
  ],
